# cinema-finder

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  config.yaml  foo.js  gen.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: build.yaml  nodejs.yml
src/: app.ts  http.ts  interface.ts  main.rs  search.ts  test.ts  theaters.ts
